--- a/styles/components/_app.module.scss
+++ b/styles/components/_app.module.scss
@@ -14,7 +14,7 @@
 .contentWrapper {
 	position: relative;
 	width: 1197px;
-	min-height: 760px;
+	min-height: 762px;
 	flex-shrink: 0;
 	padding: 30px 20px;
 }
